minor fixes for Ubuntu 24.04 and Rocky 9 and updated installation docs

--- a/ad2openldap.conf
+++ b/ad2openldap.conf
@@ -9,6 +9,33 @@
 # 'Other' must not have read access as the file contains passwords for 
 # both OpenLDAP and AD.
 
+# The account username that is able to read objects from Active
+# Directory.  AD account should have only a minimal set of 
+# privileges given its full credentials are stored in this file.
+ad_account: ldap@example.com
+
+# The password used to bind to Active Directory when downloading 
+# objects.  Again, this configuration file must be 
+# owned by root.openldap and 0640.  Other considerations are 
+# that the Active Directory password policy may cause the 
+# account to expire after a certain period if the password is 
+# not changed and that the Active Directory account used 
+# should have the absolute minimum set of privileges required
+# to perform AD queries and nothing more.
+ad_account_password: ChangeThisPassword
+
+# NOTE make sure that below you also set the 
+# bind_dn_password for the local OpenLDAP server
+
+# The protocol and hostname of the Active Directory server to query
+# against.
+ad_url: ldap://dc.example.com
+
+
+# The base DN to use from Active Directory, under which objects
+# will be retrieved.
+ad_base_dn: dc=example,dc=com
+
 # ad2openldap sends out notifications when certain conditions occur.
 # To include additional addresses, add an entry to this list.  At 
 # least one addresses is required.
@@ -47,6 +74,7 @@ delta_file: ad_export_delta.diff
 # A pid file is used to limit ad2openldap to a single instance.
 pid_file: ad2openldap.pid
 
+
 # Specify the host or IP against which the health check queries will 
 # occur
 ldap_url: ldap://127.0.0.1:389
@@ -64,33 +92,6 @@ bind_dn: cn=admin,dc=local
 # The password for the bind_dn that is used.  A note about security 
 # is that this config file must be owned by root.openldap and 0640.
 bind_dn_password: ChangeThisLocalAdminPassword12345
-
-
-# The account username that is able to read objects from Active
-# Directory.  AD account should have only a minimal set of 
-# privileges given its full credentials are stored in this file.
-ad_account: ldap@example.com
-
-
-# The password used to bind to Active Directory when downloading 
-# objects.  Again, this configuration file must be 
-# owned by root.openldap and 0640.  Other considerations are 
-# that the Active Directory password policy may cause the 
-# account to expire after a certain period if the password is 
-# not changed and that the Active Directory account used 
-# should have the absolute minimum set of privileges required
-# to perform AD queries and nothing more.
-ad_account_password: ChangeThisPassword
-
-
-# The protocol and hostname of the Active Directory server to query
-# against.
-ad_url: ldap://dc.example.com
-
-
-# The base DN to use from Active Directory, under which objects
-# will be retrieved.
-ad_base_dn: dc=example,dc=com
 
 
 # When downloading objects from Active Directory, the process 
